argo/apps/ntfy/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ntfy
  namespace: ntfy
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: ntfy
  template:
    metadata:
      labels:
        app: ntfy
    spec:
      nodeSelector:
        node-role: light
      containers:
        - name: ntfy
          image: binwiederhier/ntfy:v2.11.0
          args: ["serve"]
          ports:
            - containerPort: 80
          volumeMounts:
            - name: config
              mountPath: /etc/ntfy
            - name: cache
              mountPath: /var/cache/ntfy
            - name: data
              mountPath: /var/lib/ntfy
          resources:
            requests:
              cpu: 50m
              memory: 64Mi
            limits:
              cpu: 500m
              memory: 256Mi
      volumes:
        - name: config
          configMap:
            name: ntfy-config
        - name: cache
          persistentVolumeClaim:
            claimName: ntfy-cache
        - name: data
          persistentVolumeClaim:
            claimName: ntfy-data
